replace andma ip public with domain name

--- a/geonode/templates/about.html
+++ b/geonode/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 {% load i18n %}
-{% block title %} {% trans "About ASDC" %} — {{ block.super }} {% endblock %}
+{% block title %} {% trans "About ANHDC" %} — {{ block.super }} {% endblock %}
 {% block body_class %}about{% endblock %}
 {% block body_outer %}
 <div class="page-header">
@@ -12,34 +12,34 @@
     <div class="row">
     	<div class="col-xs-12 col-sm-6 col-md-12">
             <div class="">
-                <!-- <img src="{{ STATIC_URL }}lib/foto/asdc.png" alt=""> -->
+                <!-- <img src="{{ STATIC_URL }}lib/foto/ANHDC.png" alt=""> -->
                 <div class="caption">
-                    <h4 class="">{% trans "About ASDC" %}</h4>
+                    <h4 class="">{% trans "About ANHDC" %}</h4>
                     <p>
-					{% trans "The Afghanistan Spatial Data Center (ASDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}
+					{% trans "The Afghanistan Natural Hazard Data Center(ANHDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}
 					</p>
 					<p>
-					{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Spatial Data Center (ASDC) is the dissemination platform for DRR data and other baseline information. At present the ASDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}
+					{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Natural Hazard Data Center(ANHDC) is the dissemination platform for DRR data and other baseline information. At present the ANHDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}
 					</p>
 					<p>
-					{% trans "The information provided on ASDC are especially useful in regards to prediction, emergency response, M&E and planning purposes." %}
+					{% trans "The information provided on ANHDC are especially useful in regards to prediction, emergency response, M&E and planning purposes." %}
 					</p>
 					<div class="col-md-3">
-						<a href="{{ STATIC_URL }}lib/foto/ASDC Flyer - Small 24-07-2016.pdf">
+						<a href="{{ STATIC_URL }}lib/foto/ANHDC Flyer - Small 24-07-2016.pdf">
 						    <div class="thumbnail">
 						        <img src="{{ STATIC_URL }}lib/foto/about1.png" alt="">
 						        <div class="caption">
-						            <p class="lead">{% trans "ASDC Flyer - 4 pages" %}</p>
+						            <p class="lead">{% trans "ANHDC Flyer - 4 pages" %}</p>
 						        </div>
 						    </div>
 						</a>
 				  	</div>
 				  	<div class="col-md-3">
-				  		<a href="{{ STATIC_URL }}lib/foto/ASDC_Flyer_ind.pdf">
+				  		<a href="{{ STATIC_URL }}lib/foto/ANHDC_Flyer_ind.pdf">
 						    <div class="thumbnail">
 						        <img src="{{ STATIC_URL }}lib/foto/about2.png" alt="">
 						        <div class="caption">
-						            <p class="lead">{% trans "ASDC Flyer - 1 page" %}</p>
+						            <p class="lead">{% trans "ANHDC Flyer - 1 page" %}</p>
 						        </div>
 						    </div>
 						</a>
@@ -61,7 +61,7 @@
     <br/>
     <div class="col-md-6">
     	<div class="">
-                <!-- <img src="{{ STATIC_URL }}lib/foto/asdc.png" alt=""> -->
+                <!-- <img src="{{ STATIC_URL }}lib/foto/ANHDC.png" alt=""> -->
                 <div class="caption">
                     <h4 class="">{% trans "Main available information" %}</h4>
                     <p class="lead">{% trans "Population estimates at village level" %}</p>
@@ -97,17 +97,17 @@
 
     <div class="col-md-6">
     	<div class="">
-                <!-- <img src="{{ STATIC_URL }}lib/foto/asdc.png" alt=""> -->
+                <!-- <img src="{{ STATIC_URL }}lib/foto/ANHDC.png" alt=""> -->
                 <div class="caption">
                     <h4 class="">{% trans "ANHDC Core Team %}</h4>
                     <p class="lead">{% trans "Program Manager and Science Officer" %}</p>
-					<p>{% trans "Dr. Emlyn Hagen has led the development of the ASDC conceptually and scientifically. At one hand creating the various unique data sets utilised by the project, as well as developing the scientific methodology for the prediction and statistics." %}</p>
+					<p>{% trans "Dr. Emlyn Hagen has led the development of the ANHDC conceptually and scientifically. At one hand creating the various unique data sets utilised by the project, as well as developing the scientific methodology for the prediction and statistics." %}</p>
 
 					<p class="lead">{% trans "GeoNode Developer" %}</p>
-					<p>{% trans "Mr. Budi Hermansyah has created the ASDC GeoNode portal. Which is an advanced and further development of the GeoNode supported by the World Bank. These advancements include the creation of all statistics and user interfaces, statistics, POI’s models, as well as automated data retrieval and analysis for forecasting purposes. Furthermore, an advanced dashboard has been created by Mr Budi Hermansyah." %}</p>
+					<p>{% trans "Mr. Budi Hermansyah has created the ANHDC GeoNode portal. Which is an advanced and further development of the GeoNode supported by the World Bank. These advancements include the creation of all statistics and user interfaces, statistics, POI’s models, as well as automated data retrieval and analysis for forecasting purposes. Furthermore, an advanced dashboard has been created by Mr Budi Hermansyah." %}</p>
 
 					<p class="lead">{% trans "Information Management Officer - Training and Outreach" %}</p>
-					<p>{% trans "Noor Zangana has led the dedicated training program of users on the ASDC since July 2016. She is supported by two local nationals in this effort. The training program is further supported by videos as well as a certification process." %} </p>
+					<p>{% trans "Noor Zangana has led the dedicated training program of users on the ANHDC since July 2016. She is supported by two local nationals in this effort. The training program is further supported by videos as well as a certification process." %} </p>
                 </div>
             </div>
         </div>
