--- a/geonode/templates/account/v2/forgot_pass.html
+++ b/geonode/templates/account/v2/forgot_pass.html
@@ -35,7 +35,7 @@
 	    <form class="center" action='' method="POST">
 	        <fieldset class="login-form">
 	        	<div class="alert alert-info">
-	        		{% trans "Submit your email linked to ASDC and we will send you an email to reset your password." %}
+	        		{% trans "Submit your email linked to ANHDC and we will send you an email to reset your password." %}
 	        		{% blocktrans %}
 	        		If you have any trouble resetting your password, contact us at <a href="mailto:{{ THEME_ACCOUNT_CONTACT_EMAIL }}">{{ THEME_ACCOUNT_CONTACT_EMAIL }}</a>.
 	        		{% endblocktrans %}
