--- a/geonode/templates/publication/flooding/Look2.html
+++ b/geonode/templates/publication/flooding/Look2.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></h2>
+					<h2>A Documentation of <a href="https://anhdc.andma.gov.af">Afghanistan Spatial Data Center</a></h2>
 				</div>
 				<!-- Navbar -->
 				<nav id="nav_head" class="navbar navbar-expand-lg navbar-dark py-0 smooth_scroll" style="height: 72px;">
@@ -115,7 +115,7 @@
 				</div>
 				<div class="col-md-8">
 					<p>
-					  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Spatial Data Center (ASDC).
+					  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Natural Hazard Data Center(ANHDC).
 					</p>
 				</div>
 			</div>
@@ -129,7 +129,7 @@
 			<div class="container text-center">
 				<h2 class="text-uppercase  wow fadeIn">The Fact</h2>
 				<p class="lead pb-5  wow fadeIn">
-				  By using the ASDC, NGO’s and various agencies can plan Disaster Risk Reduction  (DRR) with a better level of information, and accuracy  which will result in a more precise and efficient  humanitarian footprint.
+				  By using the ANHDC, NGO’s and various agencies can plan Disaster Risk Reduction  (DRR) with a better level of information, and accuracy  which will result in a more precise and efficient  humanitarian footprint.
 				</p>
 				<div class="row number-counters">
 					<div class="col-md-4 wow fadeInUp animated" data-wow-duration="500ms">
@@ -170,7 +170,7 @@
 					<figure><img src="img/img_7.png" class="img-fluid"></figure>
 					<div class="p-3">
 						<!-- <h3>Title of Service here</h3> -->
-						<p>Through ASDC dashboard production, you can obtain information and data regarding to the number of people, buildings and type of land cover at flood risk. It is divided in low, moderate, and high flood risk.  The search for information can be filtered for the whole country, at province level, or district level.</p>
+						<p>Through ANHDC dashboard production, you can obtain information and data regarding to the number of people, buildings and type of land cover at flood risk. It is divided in low, moderate, and high flood risk.  The search for information can be filtered for the whole country, at province level, or district level.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 mb-5">
@@ -214,7 +214,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -294,7 +294,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -307,7 +307,7 @@
 			<div class="row justify-content-md-center">
 			  <div class="col-xl-5 col-md-10 pr-md-5 pr-sm-0">
 			    <h2 class="mt-0 heading-border-top mb-3 font-weight-normal text-uppercase">Static Maps</h2>
-			    <p class="lead">iMMAP´s static maps on Flood risk: the ASDC contains more than 500 maps on various aspects of flood risk. The entire static map catalog includes more than 2500 maps for the humanitarian community in Afghanistan.</p>
+			    <p class="lead">iMMAP´s static maps on Flood risk: the ANHDC contains more than 500 maps on various aspects of flood risk. The entire static map catalog includes more than 2500 maps for the humanitarian community in Afghanistan.</p>
 			  </div>
 			  <div class="col-xl-7 col-md-9">
 			    <div class="images">
@@ -329,7 +329,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -376,7 +376,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -389,7 +389,7 @@
 			<div class="row">
 				<div class="col-lg-5 pl-md-5 pl-sm-0">
 					<h2 class="mb-3 heading-border-top font-weight-normal text-uppercase">Finder Tool</h2>
-					<p class="lead">ASDC´s finder tool will help you locate airports, settlements and health facilities for flooding emergency response. Accessibility, and construction purposes.</p>
+					<p class="lead">ANHDC´s finder tool will help you locate airports, settlements and health facilities for flooding emergency response. Accessibility, and construction purposes.</p>
 				</div>
 				<div class="col-lg-7">
 				    <div class="images right">
@@ -410,7 +410,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -424,16 +424,16 @@
 			    Training and Certification
 			</h2>
 			<p class="text-center lead pb-5">
-			  	Get dedicated training using the ASDC by our local national and international staff.
+			  	Get dedicated training using the ANHDC by our local national and international staff.
 			</p>
 			<div class="row justify-content-center align-items-center">
 				<div class="col-xl-4 col-lg-4 col-md-5 pb-3">
 					<img src="img/img_28.jpg" class="img-fluid">
 				</div>
 				<div class="col">
-					<p>Our ASDC Professional User Certification can be obtained after completing the training program. Alternatively, it can be taken individually after registering on ASDC.</p>
+					<p>Our ANHDC Professional User Certification can be obtained after completing the training program. Alternatively, it can be taken individually after registering on ANHDC.</p>
 					<p>
-					  Go through our online interactive scenario based training and become certified in all aspects of the ASDC
+					  Go through our online interactive scenario based training and become certified in all aspects of the ANHDC
 					</p>
 					<img src="img/img_27.png" class="img-fluid">
 				</div>
@@ -450,7 +450,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
@@ -486,8 +486,8 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
-									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
+									    <img src="img/scen_ANHDC_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
@@ -495,7 +495,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -504,7 +504,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_02_maps.png" class="img-fluid">
+									<img src="img/scen_ANHDC_02_maps.png" class="img-fluid">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -520,7 +520,7 @@
 						</div>
 						<div class="col-lg-8">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen_asdc_03_humanitarian.png" class="img-fluid">
+								<img src="img/scen_ANHDC_03_humanitarian.png" class="img-fluid">
 								<div class="media-body">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -536,7 +536,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_04.png" class="img-fluid" alt="scen1">
+									<img src="img/scen_ANHDC_04.png" class="img-fluid" alt="scen1">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -551,7 +551,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_05.png" class="img-fluid" alt="scen1">
+									<img src="img/scen_ANHDC_05.png" class="img-fluid" alt="scen1">
 									<div class="media-body pt-3">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -567,7 +567,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen_asdc_06.png" class="img-fluid" alt="scen1">
+								<img src="img/scen_ANHDC_06.png" class="img-fluid" alt="scen1">
 								<div class="media-body">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -582,7 +582,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen_asdc_07.png" class="img-fluid" alt="scen1">
+								<img src="img/scen_ANHDC_07.png" class="img-fluid" alt="scen1">
 								<div class="media-body pt-3">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -608,8 +608,8 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
-									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
+									    <img src="img/scen_ANHDC_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
@@ -617,7 +617,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -626,7 +626,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_02_maps.png" class="img-fluid">
+									<img src="img/scen_ANHDC_02_maps.png" class="img-fluid">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -642,7 +642,7 @@
 						</div>
 						<div class="col-lg-8">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen2_asdc_03.png" class="img-fluid">
+								<img src="img/scen2_ANHDC_03.png" class="img-fluid">
 								<div class="media-body">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -658,7 +658,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen2_asdc_04.png" class="img-fluid" alt="scen1">
+									<img src="img/scen2_ANHDC_04.png" class="img-fluid" alt="scen1">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -673,7 +673,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen2_asdc_05.png" class="img-fluid" alt="scen1">
+									<img src="img/scen2_ANHDC_05.png" class="img-fluid" alt="scen1">
 									<div class="media-body pt-3">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -689,7 +689,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen2_asdc_06.png" class="img-fluid" alt="scen1">
+								<img src="img/scen2_ANHDC_06.png" class="img-fluid" alt="scen1">
 								<div class="media-body pt-3">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -704,7 +704,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen2_asdc_07.png" class="img-fluid" alt="scen1">
+								<img src="img/scen2_ANHDC_07.png" class="img-fluid" alt="scen1">
 								<div class="media-body pt-3">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -730,8 +730,8 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
-									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
+									    <img src="img/scen_ANHDC_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
@@ -739,7 +739,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -748,7 +748,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_02_maps.png" class="img-fluid">
+									<img src="img/scen_ANHDC_02_maps.png" class="img-fluid">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -764,7 +764,7 @@
 						</div>
 						<div class="col-lg-8">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen_asdc_03_humanitarian.png" class="img-fluid">
+								<img src="img/scen_ANHDC_03_humanitarian.png" class="img-fluid">
 								<div class="media-body">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -780,7 +780,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_04.png" class="img-fluid" alt="scen1">
+									<img src="img/scen_ANHDC_04.png" class="img-fluid" alt="scen1">
 									<div class="media-body">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -795,7 +795,7 @@
 							</div>
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<img src="img/scen_asdc_05.png" class="img-fluid" alt="scen1">
+									<img src="img/scen_ANHDC_05.png" class="img-fluid" alt="scen1">
 									<div class="media-body pt-3">
 										<div class="d-flex flex-row align-items-center">
 											<div class="inst_numbers text-danger">
@@ -811,7 +811,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen_asdc_06.png" class="img-fluid" alt="scen1">
+								<img src="img/scen_ANHDC_06.png" class="img-fluid" alt="scen1">
 								<div class="media-body">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -826,7 +826,7 @@
 						</div>
 						<div class="col-lg-4">
 							<div class="media d-block pb-md-3">
-								<img src="img/scen3_asdc_07.png" class="img-fluid" alt="scen1">
+								<img src="img/scen3_ANHDC_07.png" class="img-fluid" alt="scen1">
 								<div class="media-body pt-3">
 									<div class="d-flex flex-row align-items-center">
 										<div class="inst_numbers text-danger">
@@ -855,7 +855,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ANHDC</a>
 				</div>
 			</div>
 		</div>
