--- a/geonode/templates/publication/flooding/Look5.html
+++ b/geonode/templates/publication/flooding/Look5.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></h2>
+					<h2>A Documentation of <a href="https://anhdc.andma.gov.af">Afghanistan Spatial Data Center</a></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -101,7 +101,7 @@
 			  Afghanistan’s economy is mainly sustained by agricultural and livestock produce, therefore floods hinder the economy to a considerable extent. Even a small flood, can take away the source of income of an entire village, and plunge its livelihood into uncertainty. While flooding itself is problematic. Climate change has also increased the severity of the flooding in Afghanistan, which means NGO’s and government programs need to reassess, and make changes to how they execute their programs.
 			</p>
 			<p>
-			  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Spatial Data Center (ASDC).
+			  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Natural Hazard Data Center(ASDC).
 			</p>
 			<div class="row justify-content-center">
 				<div class="col-md-4 pb-3">
@@ -209,7 +209,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -289,7 +289,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -324,7 +324,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -371,7 +371,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -405,7 +405,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -445,7 +445,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -481,7 +481,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -490,7 +490,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -603,7 +603,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -612,7 +612,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -725,7 +725,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://18.196.236.51"> 
+									<section class="facade-minimal" data-url="http://anhdc.andma.gov.af"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -734,7 +734,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -850,7 +850,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
