--- a/geonode/templates/training.html
+++ b/geonode/templates/training.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 {% load i18n %}
-{% block title %} {% trans "About ASDC" %} — {{ block.super }} {% endblock %}
+{% block title %} {% trans "About ANHDC" %} — {{ block.super }} {% endblock %}
 {% block body_class %}about training {{ block.super }}{% endblock %}
 {% block body_outer %}
 <div class="page-header">
@@ -10,7 +10,7 @@
 <div class="col-md-8">
 	<p class="lead">{% trans "Dedicated Training Program" %}</p>
 	<p>{% trans "A dedicated training program is available. Make an appointment at the iMMAP offices in Kabul for basic or in-depth training. Training sessions can exist in the form of a half day introductory session, up to 3-day in-depth training sessions." %}</p>
-	<p>{% trans "Training is given in English by Noor Zangana, a dedicated professional trainer on the ASDC. She is supported by two local national staff. Alternatively, 20-30 minutes telephone walkthrough training sessions are also possible." %}</p>
+	<p>{% trans "Training is given in English by Noor Zangana, a dedicated professional trainer on the ANHDC. She is supported by two local national staff. Alternatively, 20-30 minutes telephone walkthrough training sessions are also possible." %}</p>
 </div>
 <div class="col-md-4 desc-img">
 	<img src="{{ STATIC_URL }}lib/foto/training5.png" alt="">
@@ -20,9 +20,9 @@
 
 
 <div class="col-md-8">
-	<p class="lead">{% trans "ASDC Professional User Certification program" %}</p>
-	<p>{% trans "iMMAP has initiated the ASDC Professional User Certification program, which further expands the ASDC training program with hands-on exercises. The certification highlights user proficiency with the functionalities of the ASDC and the capability to independently advance this knowledge." %}</p>
-	<p>{% trans "The certification takes place online and consist of 80 interactive questions &#40;75&#37; passing mark&#41;, tied to various scenarios. For proficient users it will take approximately 1-2 hours to complete, whereas for novice yet trained users it can take more than 3 hours. Having seen the ASDC Training videos is a perquisite to be able to complete." %}</p>
+	<p class="lead">{% trans "ANHDC Professional User Certification program" %}</p>
+	<p>{% trans "iMMAP has initiated the ANHDC Professional User Certification program, which further expands the ANHDC training program with hands-on exercises. The certification highlights user proficiency with the functionalities of the ANHDC and the capability to independently advance this knowledge." %}</p>
+	<p>{% trans "The certification takes place online and consist of 80 interactive questions &#40;75&#37; passing mark&#41;, tied to various scenarios. For proficient users it will take approximately 1-2 hours to complete, whereas for novice yet trained users it can take more than 3 hours. Having seen the ANHDC Training videos is a perquisite to be able to complete." %}</p>
 	<p>{% trans "In the future, the certification will be a perquisite to access the Humanitarian Access tool/data" %}</p>
 
 	<p><a href="../dashboard/classmarker" target="_blank"> {% trans "Click here go to Certification Portal" %}</a></p>
@@ -36,7 +36,7 @@
 
 <div class="col-md-12">
 	<p class="lead">{% trans "Video Training" %}</p>
-	<p>{% trans "To facility better communication a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Spatial Data Center (18.196.236.51).  The instruction videos can be found on YouTube and on the ASDC. (available in Dari and English). There are already 11 training videos, totalling 1 ½ hours of material." %}</p>
+	<p>{% trans "To facility better communication a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazard Data Center(anhdc.andma.gov.af).  The instruction videos can be found on YouTube and on the ANHDC. (available in Dari and English). There are already 11 training videos, totalling 1 ½ hours of material." %}</p>
 	<p><a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Click here go to youtube page" %}</a></p>
 	<img src="{{ STATIC_URL }}lib/foto/training2.png" alt="">
 
