--- a/geonode/templates/v2/training.html
+++ b/geonode/templates/v2/training.html
@@ -80,7 +80,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h3>{% trans "Videos" %}</h3>
-				<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Spatial Data Center (18.196.236.51). The instruction videos can be found on YouTube and on the ASDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}</p>
+				<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazard Data Center(anhdc.andma.gov.af). The instruction videos can be found on YouTube and on the ASDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}</p>
 				<a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Go to Youtube Channel" %}</a>
 
 				<p>&nbsp;</p>
