--- a/pushnotif/templates/email_simple_hybrid.html
+++ b/pushnotif/templates/email_simple_hybrid.html
@@ -510,7 +510,7 @@
                                 PLEASE DO NOT REPLY TO THIS MESSAGE.
                             </p>
                             <p>
-                                DATA DISCLAIMER: The Afghanistan Spatial Data Center Data/Maps were created by the iMMAP DRR program. A degree of error is
+                                DATA DISCLAIMER: The Afghanistan Natural Hazard Data Center Data/Maps were created by the iMMAP DRR program. A degree of error is
                                 inherent in all datasets, especially modelled maps and maps of dynamic events such as flooding,
                                 earthquakes. Accordingly, the information is distributed "AS-IS" without warranties of any
                                 kind, either express or implied. iMMAP shall not accept any liability or warranties for damages
