--- a/pushnotif/templates/email_text_footer.html
+++ b/pushnotif/templates/email_text_footer.html
@@ -9,14 +9,14 @@
     <li>{% blocktrans %}Generally, more shaking at the surface has the potential to create more damage, however construction
         methods and soil conditions differ from region to region and therefore this data is only informative.{% endblocktrans %}</li>
     <li>{% blocktrans %}This data is only informative.{% endblocktrans %}</li>
-    <li>{% blocktrans %}Please find in attachment maps and statistics from the ASDC related to this event.{% endblocktrans %}</li>
+    <li>{% blocktrans %}Please find in attachment maps and statistics from the ANHDC related to this event.{% endblocktrans %}</li>
     {% elif eventtypeid == 'earthquake_epicenter'%}
     <li>{% blocktrans %}iMMAP uses data from the USGS Earthquake Hazards Program to create these estimates.{% endblocktrans %}</li>
-    <li>{% blocktrans %}Please find in attachment maps and statistics from the ASDC related to this event.{% endblocktrans %}</li>
+    <li>{% blocktrans %}Please find in attachment maps and statistics from the ANHDC related to this event.{% endblocktrans %}</li>
     {% else %}
     <li>{% blocktrans %}The data is at present not calibrated there can be over/under estimations.{% endblocktrans %}</li>
     <li>{% blocktrans %}This data is only informative.{% endblocktrans %}</li>
-    <li>{% blocktrans %}Please find in attachment maps and statistics from the ASDC related to this event.{% endblocktrans %}</li>
+    <li>{% blocktrans %}Please find in attachment maps and statistics from the ANHDC related to this event.{% endblocktrans %}</li>
     {% endif %}
 </ul>
 <br />
