--- a/dashboard/templates/v2/dash_fforecast.html
+++ b/dashboard/templates/v2/dash_fforecast.html
@@ -24,7 +24,7 @@
 	                                <a class="close-link"><i class="fa fa-close"></i></a>
 	                            </li>
                                 <li>
-                                    <a href="http://18.196.236.51/maps/700/view" class="btn btn-primary" target="_blank">{% trans 'Visit Interactive Maps' %}</a>
+                                    <a href="http://anhdc.andma.gov.af/maps/700/view" class="btn btn-primary" target="_blank">{% trans 'Visit Interactive Maps' %}</a>
                                 </li>
 	                        </ul>
 	                        <div class="clearfix"></div>
