--- a/dashboard/templates/v2/dash_haccess.html
+++ b/dashboard/templates/v2/dash_haccess.html
@@ -28,7 +28,7 @@
 	                                <a class="close-link"><i class="fa fa-close"></i></a>
 	                            </li>
 	                            <li>
-	                                <a href="http://18.196.236.51/maps/656/view" class="btn btn-primary" target="_blank">{% trans 'Visit Interactive Maps' %}</a>
+	                                <a href="http://anhdc.andma.gov.af/maps/656/view" class="btn btn-primary" target="_blank">{% trans 'Visit Interactive Maps' %}</a>
 	                            </li>
 	                        </ul>
 	                        <div class="clearfix"></div>
