--- a/geonode/templates/disclaimer.html
+++ b/geonode/templates/disclaimer.html
@@ -10,11 +10,11 @@
   <p class="lead">{% trans "1. Introduction" %}</p>
   <blockquote>
     <p>{% trans "iMMAP in Afghanistan is funded by The United States Agency for International Development (USAID)/ Office of U.S. Foreign Disaster Assistance (OFDA)." %}</p>
-    <p>{% trans "The Afghanistan Spatial Data Center is part of the iMMAP Disaster Risk Reduction (DRR) Program, which is a USAID/OFDA funded project to provide DRR relevant information and information management services to the humanitarian community in Afghanistan." %}</p>
+    <p>{% trans "The Afghanistan Natural Hazard Data Center is part of the iMMAP Disaster Risk Reduction (DRR) Program, which is a USAID/OFDA funded project to provide DRR relevant information and information management services to the humanitarian community in Afghanistan." %}</p>
   </blockquote>
   <p class="lead">{% trans "1.1       Data Disclaimer" %}</p>
   <blockquote>
-    <p>{% trans "The Afghanistan Spatial Data Center Data/Maps were created by the iMMAP DRR program. Some flaws and limitations of the data are described in this document. However, a degree of error is inherent in all datasets, especially modelled maps and maps of dynamic events such as floods. Accordingly, the information is distributed &quot;AS-IS&quot; without warranties of any kind, either express or implied. iMMAP shall not accept any liability or warranties for damages incurring from the use of this data, including but not limited to warranties of suitability to a particular purpose or use. No attempt has been made in either the design or production of the data to define the limits or jurisdiction of any federal, state, or local government. The map is intended for use only at the published scale." %}</p>
+    <p>{% trans "The Afghanistan Natural Hazard Data Center Data/Maps were created by the iMMAP DRR program. Some flaws and limitations of the data are described in this document. However, a degree of error is inherent in all datasets, especially modelled maps and maps of dynamic events such as floods. Accordingly, the information is distributed &quot;AS-IS&quot; without warranties of any kind, either express or implied. iMMAP shall not accept any liability or warranties for damages incurring from the use of this data, including but not limited to warranties of suitability to a particular purpose or use. No attempt has been made in either the design or production of the data to define the limits or jurisdiction of any federal, state, or local government. The map is intended for use only at the published scale." %}</p>
   </blockquote>
   <p class="lead">{% trans "1.2       Limitation of Warranties and Liability" %}</p>
   <blockquote>
@@ -29,7 +29,7 @@
   </blockquote>
   <p class="lead">{% trans "1.4       Citing and Reference" %}</p>
   <blockquote>
-    <p>{% trans "When using the data/maps or referring to it, the Afghanistan Spatial Data Center should be referred to as following:" %}</p>
+    <p>{% trans "When using the data/maps or referring to it, the Afghanistan Natural Hazard Data Center should be referred to as following:" %}</p>
     <p>{% trans "ASDC iMMAP (2016). Afghanistan Spatial Data Center. iMMAP 1300 Pennsylvania Avenue NW Suite 470 Washington, DC 20004 USA." %}</p>
     <p>{% trans "When using a particular data source(s), use the source reference of each one source, see data layers for more information. E.g." %}</p>
     <p>{% trans "Mohadjer, S., Strube, T., Ehlers, T.A., Bendick, R., (2015). Central Asia Fault Database." %}</p>
