--- a/geonode/templates/documentation.html
+++ b/geonode/templates/documentation.html
@@ -7,7 +7,7 @@
 
   <div class="container">
     <p class="lead">{% trans "Documentation" %}</p>
-    <p><a href="{{ STATIC_URL }}lib/foto/ASDC_Documentation_v0.9_Emlyn_Hagen.pdf">{% trans "Click here go to view Documentation for the ASDC Data and Methodologies" %}</a></p>
+    <p><a href="{{ STATIC_URL }}lib/foto/ASDC_Documentation_v0.9_Emlyn_Hagen.pdf">{% trans "Click here go to view Documentation for the ANHDC Data and Methodologies" %}</a></p>
 
   </div>
 
