--- a/geonode/templates/partners.html
+++ b/geonode/templates/partners.html
@@ -10,7 +10,7 @@
   <!-- <p class="lead">{% trans "About Afghanistan Spatial Data Center." %}</p> -->
   <p class="lead">{% trans "Data Providers and Partners" %}</p>
   <p>{% trans "This list provides an insight in the main partners who have provided or are providing essential data." %}
-  {% trans "For each of the organisations the main contributions for the ASDC are listed." %}</p>
+  {% trans "For each of the organisations the main contributions for the ANHDC are listed." %}</p>
   <p>{% trans "Homepage | Photo credit to Bob McKerrow, description:  Teshkan Valley, Badakhshan" %}</p>
   <!-- <p class="lead">Scientific</p> -->
   <div class="col-md-3">
