--- a/geonode/templates/publication/flooding/Look6.html
+++ b/geonode/templates/publication/flooding/Look6.html
@@ -46,7 +46,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <strong><a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of <strong><a href="https://anhdc.andma.gov.af">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -102,7 +102,7 @@
 						<!-- First Image on the left side -->
 						<div class="image-container image-left" style="background-image: url('img/img_2.jpg');">
 							<p class="blockquote blockquote-primary">
-							  Afghanistan Spatial Data Center (ASDC) mitigate the impact of flooding by implementing climate change adaptation concepts into development projects.
+							  Afghanistan Natural Hazard Data Center(ASDC) mitigate the impact of flooding by implementing climate change adaptation concepts into development projects.
 							</p>
 						</div>
 						<!-- Second image on the left side of the article -->
@@ -118,7 +118,7 @@
 						  Afghanistan’s economy is mainly sustained by agricultural and livestock produce, therefore floods hinder the economy to a considerable extent. Even a small flood, can take away the source of income of an entire village, and plunge its livelihood into uncertainty. While flooding itself is problematic. Climate change has also increased the severity of the flooding in Afghanistan, which means NGO’s and government programs need to reassess, and make changes to how they execute their programs.
 						</p>
 						<p>
-						  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Spatial Data Center (ASDC).
+						  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Natural Hazard Data Center(ASDC).
 						</p>
 					</div>
 				</div>
@@ -217,7 +217,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -297,7 +297,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -332,7 +332,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -379,7 +379,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -413,7 +413,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -453,7 +453,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -489,7 +489,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -499,7 +499,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -606,7 +606,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -616,7 +616,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -732,7 +732,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -742,7 +742,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://anhdc.andma.gov.af">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -852,7 +852,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://anhdc.andma.gov.af">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
