--- a/geonode/templates/publication/flooding/Look8.html
+++ b/geonode/templates/publication/flooding/Look8.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Afghanistan Flooding</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="The latest information about afghanistan flooding. Learn how to use Afghanistan Spatial Data Center (ASDC) here!">
+	<meta name="description" content="The latest information about afghanistan flooding. Learn how to use Afghanistan Natural Hazard Data Center(ASDC) here!">
 	<meta name="keywords" content="Afghanistan Flooding,Afghanistan Flood,Afghanistan Floods,Flood Forecast,Floods Forecast,Flood Forecasts,Flood Forecasting,Floods Forecasting,Flood prediction,Flood predicting,Flood Risk,Flood Risks,Floods Risk,Floods Risks,Flood Casualty,Flood Casualties,Floods Casualty,Floods Casualties,Flood,Floods,Flooding,Prediction,Predicts,Predicting,Forecast,Forecasts,Forecasting,Risk,Risks,Casualty,Casualties,Afghanistan,Afghanistan Spatial Data Center,ASDC,ASDC Documentation,Documentation,Information,immap">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -58,7 +58,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of the <strong><a href="http://18.196.236.51" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of the <strong><a href="http://anhdc.andma.gov.af" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -114,7 +114,7 @@
 						<!-- First Image on the left side -->
 						<div class="image-container image-left" style="background-image: url('{{ STATIC_URL }}publication/flooding/img/img_2.jpg');">
 							<p class="blockquote blockquote-primary">
-							  Afghanistan Spatial Data Center (ASDC) mitigate the impact of flooding by implementing climate change adaptation concepts into development projects.
+							  Afghanistan Natural Hazard Data Center(ASDC) mitigate the impact of flooding by implementing climate change adaptation concepts into development projects.
 							</p>
 						</div>
 						<!-- Second image on the left side of the article -->
@@ -130,7 +130,7 @@
 						  Afghanistan’s economy is mainly sustained by agricultural and livestock produce, therefore floods hinder the economy to a considerable extent. Even a small flood, can take away the source of income of an entire village, and plunge its livelihood into uncertainty. While flooding itself is problematic. Climate change has also increased the severity of the flooding in Afghanistan, which means NGO’s and government programs need to reassess, and make changes to how they execute their programs.
 						</p>
 						<p>
-						  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Spatial Data Center (ASDC).
+						  While it is not possible to completely avoid flooding, we can mitigate the impact of flooding by implementing climate change adaptation concepts into development projects, and by creating awareness through the education and use of information technology tools such as the Afghanistan Natural Hazard Data Center(ASDC).
 						</p>
 					</div>
 				</div>
@@ -229,7 +229,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -317,7 +317,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -352,7 +352,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -399,7 +399,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -433,7 +433,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -473,7 +473,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -509,7 +509,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -519,7 +519,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://anhdc.andma.gov.af" target="_blank">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -626,7 +626,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -636,7 +636,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://anhdc.andma.gov.af" target="_blank">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -752,7 +752,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height">
-										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
+										<section class="facade-minimal m-0" data-url="http://anhdc.andma.gov.af"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -762,7 +762,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://anhdc.andma.gov.af" target="_blank">anhdc.andma.gov.af</a></strong></p>
 											</div>
 											
 										</div>
@@ -872,7 +872,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://anhdc.andma.gov.af" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
