--- a/pushnotif/templates/email_text_body_avalanche.html
+++ b/pushnotif/templates/email_text_body_avalanche.html
@@ -3,7 +3,7 @@
     <td align="left" bgcolor="#ffffff" style="border-radius: 0 0 3px 3px; padding: 0px 25px 10px;">
         <p style="font-family: Arial,Helvetica,sans-serif; color: #444444; font-size: 12px; line-height: 18px; margin: 0; text-align: justify;">
             {% blocktrans %}Please find below the estimated population within predicted avalanche risk areas on
-            <strong>{{ current_date }}</strong>. The information is taken from the ASDC at national level.{% endblocktrans %}
+            <strong>{{ current_date }}</strong>. The information is taken from the ANHDC at national level.{% endblocktrans %}
         </p>
     </td>
 </tr>
