--- a/securitydb/templates/baseform.html
+++ b/securitydb/templates/baseform.html
@@ -22,7 +22,7 @@
 		<div class="page-header">
 			<h1>iMMAP: Security System Entry Form</h1>
 			<ol class="breadcrumb">
-				<a href="http://18.196.236.51">Afghanistan Natural Hazard Data Center</a>
+				<a href="http://anhdc.andma.gov.af">Afghanistan Natural Hazard Data Center</a>
 			</ol>
 		</div>
 	</header>
