--- a/dashboard/templates/v2/dash_main.html
+++ b/dashboard/templates/v2/dash_main.html
@@ -1104,7 +1104,7 @@
 	        	</div>
 	        </div>
 
-	        <div class="row">
+	        <!-- <div class="row">
 	        	<div class="col-md-12 col-sm-12 col-xs-12">
 	              <div class="x_panel">
 	                <div class="x_title">
@@ -1158,7 +1158,7 @@
 	                </div>
 	              </div>
 	            </div>
-	        </div>
+	        </div> -->
 	    </section>
 	</div>
 
