--- a/geonode/templates/account/password_change.html
+++ b/geonode/templates/account/password_change.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "v2/site_base.html" %}
 
 {% load url from future %}
 {% load i18n %}
@@ -6,15 +6,38 @@
 
 {% block head_title %}{% trans "Change password" %}{% endblock %}
 
-{% block body %}
-    <form method="POST" action="">
-        <legend>{% trans "Change password" %}</legend>
-        <fieldset>
-            {% csrf_token %}
-            {{ form|as_bootstrap }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+{% block body_outer %}
+    <!-- Title -->
+	<section class="title">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-6">
+	                <h1>{% trans "Change Password" %}</h1>
+	            </div>
+	            <div class="col-md-6">
+	                <ul class="breadcrumb pull-right">
+	                    <li class="active">{% trans "Change Password" %}</li>
+	                </ul>
+	            </div>
+	        </div>
+	    </div>
+	</section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                    <form method="POST" action="">
+                        <fieldset>
+                            {% csrf_token %}
+                            {{ form|as_bootstrap }}
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
-        </fieldset>
-    </form>
-{% endblock %}
+        </div>
+    </section>
+    {% endblock %}
